# LadderWeb

./: .gitignore
ladder-web/: .env.example  Makefile  Procfile  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  init-git.sh  init_project.sh  nginx-production.conf  nginx.conf  package.json  pyproject.toml  run.py  run.sh  server.py  start.sh  yandex-gpt-proxy.py
ladder-web/backend/: Dockerfile  alembic.ini  gunicorn.conf.py  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_db.sh  setup_local_db.sh
ladder-web/backend/app/: __init__.py  config.py  database.py  main.py
ladder-web/backend/app/api/: admin.py  ai.py  auth.py  deps.py  notes.py  tasks.py  telegram.py  users.py
ladder-web/backend/app/models/: __init__.py  note.py  project.py  subscription.py  suggestion.py  task.py  telegram_user.py  user.py
ladder-web/backend/app/schemas/: __init__.py  ai.py  notes.py  task.py  telegram.py  user.py
ladder-web/backend/app/services/: ai_service.py  auth_service.py  notification_service.py  task_service.py  telegram_service.py
ladder-web/backend/app/telegram_bot/: bot.py  webhooks.py
ladder-web/backend/migrations/: env.py
ladder-web/backend/tests/: test_api.py  test_models.py  test_services.py
ladder-web/docker/nginx/: nginx.conf
ladder-web/docker/postgres/: init.sql
ladder-web/docker/redis/: redis.conf
ladder-web/frontend/: Dockerfile  YANDEX_GPT_SETUP.md  nginx.conf
ladder-web/frontend/public/: 404.html  admin.html  ai-task.html  chat.html  create-task.html  gpt-plan.html  index.html  info.html  notes.html  plan.html  profile.html  settings.html  subscription.html  tasks.html
(+76 files in other folders)
